--- a/.travis.yml
+++ b/.travis.yml
@@ -11,165 +11,306 @@ cache: pip
 
 matrix:
   include:
-    - python: 2.7
-      env:
-        - TOXENV=py2.7-django1.8-sqlite3-redis
-        - TOXENV=py2.7-django1.8-sqlite3-memcached
-        - TOXENV=py2.7-django1.8-sqlite3-pylibmc
-        - TOXENV=py2.7-django1.8-sqlite3-locmem
-        - TOXENV=py2.7-django1.8-sqlite3-filebased
-        - TOXENV=py2.7-django1.8-postgresql-redis
-        - TOXENV=py2.7-django1.8-postgresql-memcached
-        - TOXENV=py2.7-django1.8-postgresql-pylibmc
-        - TOXENV=py2.7-django1.8-postgresql-locmem
-        - TOXENV=py2.7-django1.8-postgresql-filebased
-        - TOXENV=py2.7-django1.8-mysql-redis
-        - TOXENV=py2.7-django1.8-mysql-memcached
-        - TOXENV=py2.7-django1.8-mysql-pylibmc
-        - TOXENV=py2.7-django1.8-mysql-locmem
-        - TOXENV=py2.7-django1.8-mysql-filebased
-        - TOXENV=py2.7-django1.10-sqlite3-redis
-        - TOXENV=py2.7-django1.10-sqlite3-memcached
-        - TOXENV=py2.7-django1.10-sqlite3-pylibmc
-        - TOXENV=py2.7-django1.10-sqlite3-locmem
-        - TOXENV=py2.7-django1.10-sqlite3-filebased
-        - TOXENV=py2.7-django1.10-postgresql-redis
-        - TOXENV=py2.7-django1.10-postgresql-memcached
-        - TOXENV=py2.7-django1.10-postgresql-pylibmc
-        - TOXENV=py2.7-django1.10-postgresql-locmem
-        - TOXENV=py2.7-django1.10-postgresql-filebased
-        - TOXENV=py2.7-django1.10-mysql-redis
-        - TOXENV=py2.7-django1.10-mysql-memcached
-        - TOXENV=py2.7-django1.10-mysql-pylibmc
-        - TOXENV=py2.7-django1.10-mysql-locmem
-        - TOXENV=py2.7-django1.10-mysql-filebased
-        - TOXENV=py2.7-django1.11-sqlite3-redis
-        - TOXENV=py2.7-django1.11-sqlite3-memcached
-        - TOXENV=py2.7-django1.11-sqlite3-pylibmc
-        - TOXENV=py2.7-django1.11-sqlite3-locmem
-        - TOXENV=py2.7-django1.11-sqlite3-filebased
-        - TOXENV=py2.7-django1.11-postgresql-redis
-        - TOXENV=py2.7-django1.11-postgresql-memcached
-        - TOXENV=py2.7-django1.11-postgresql-pylibmc
-        - TOXENV=py2.7-django1.11-postgresql-locmem
-        - TOXENV=py2.7-django1.11-postgresql-filebased
-        - TOXENV=py2.7-django1.11-mysql-redis
-        - TOXENV=py2.7-django1.11-mysql-memcached
-        - TOXENV=py2.7-django1.11-mysql-pylibmc
-        - TOXENV=py2.7-django1.11-mysql-locmem
-        - TOXENV=py2.7-django1.11-mysql-filebased
-    - python: 3.4
-      env:
-        - TOXENV=py3.4-django1.8-sqlite3-redis
-        - TOXENV=py3.4-django1.8-sqlite3-memcached
-        - TOXENV=py3.4-django1.8-sqlite3-pylibmc
-        - TOXENV=py3.4-django1.8-sqlite3-locmem
-        - TOXENV=py3.4-django1.8-sqlite3-filebased
-        - TOXENV=py3.4-django1.8-postgresql-redis
-        - TOXENV=py3.4-django1.8-postgresql-memcached
-        - TOXENV=py3.4-django1.8-postgresql-pylibmc
-        - TOXENV=py3.4-django1.8-postgresql-locmem
-        - TOXENV=py3.4-django1.8-postgresql-filebased
-        - TOXENV=py3.4-django1.8-mysql-redis
-        - TOXENV=py3.4-django1.8-mysql-memcached
-        - TOXENV=py3.4-django1.8-mysql-pylibmc
-        - TOXENV=py3.4-django1.8-mysql-locmem
-        - TOXENV=py3.4-django1.8-mysql-filebased
-        - TOXENV=py3.4-django1.10-sqlite3-redis
-        - TOXENV=py3.4-django1.10-sqlite3-memcached
-        - TOXENV=py3.4-django1.10-sqlite3-pylibmc
-        - TOXENV=py3.4-django1.10-sqlite3-locmem
-        - TOXENV=py3.4-django1.10-sqlite3-filebased
-        - TOXENV=py3.4-django1.10-postgresql-redis
-        - TOXENV=py3.4-django1.10-postgresql-memcached
-        - TOXENV=py3.4-django1.10-postgresql-pylibmc
-        - TOXENV=py3.4-django1.10-postgresql-locmem
-        - TOXENV=py3.4-django1.10-postgresql-filebased
-        - TOXENV=py3.4-django1.10-mysql-redis
-        - TOXENV=py3.4-django1.10-mysql-memcached
-        - TOXENV=py3.4-django1.10-mysql-pylibmc
-        - TOXENV=py3.4-django1.10-mysql-locmem
-        - TOXENV=py3.4-django1.10-mysql-filebased
-        - TOXENV=py3.4-django1.11-sqlite3-redis
-        - TOXENV=py3.4-django1.11-sqlite3-memcached
-        - TOXENV=py3.4-django1.11-sqlite3-pylibmc
-        - TOXENV=py3.4-django1.11-sqlite3-locmem
-        - TOXENV=py3.4-django1.11-sqlite3-filebased
-        - TOXENV=py3.4-django1.11-postgresql-redis
-        - TOXENV=py3.4-django1.11-postgresql-memcached
-        - TOXENV=py3.4-django1.11-postgresql-pylibmc
-        - TOXENV=py3.4-django1.11-postgresql-locmem
-        - TOXENV=py3.4-django1.11-postgresql-filebased
-        - TOXENV=py3.4-django1.11-mysql-redis
-        - TOXENV=py3.4-django1.11-mysql-memcached
-        - TOXENV=py3.4-django1.11-mysql-pylibmc
-        - TOXENV=py3.4-django1.11-mysql-locmem
-        - TOXENV=py3.4-django1.11-mysql-filebased
-    - python: 3.5
-      env:
-        - TOXENV=py3.5-django1.8-sqlite3-redis
-        - TOXENV=py3.5-django1.8-sqlite3-memcached
-        - TOXENV=py3.5-django1.8-sqlite3-pylibmc
-        - TOXENV=py3.5-django1.8-sqlite3-locmem
-        - TOXENV=py3.5-django1.8-sqlite3-filebased
-        - TOXENV=py3.5-django1.8-postgresql-redis
-        - TOXENV=py3.5-django1.8-postgresql-memcached
-        - TOXENV=py3.5-django1.8-postgresql-pylibmc
-        - TOXENV=py3.5-django1.8-postgresql-locmem
-        - TOXENV=py3.5-django1.8-postgresql-filebased
-        - TOXENV=py3.5-django1.8-mysql-redis
-        - TOXENV=py3.5-django1.8-mysql-memcached
-        - TOXENV=py3.5-django1.8-mysql-pylibmc
-        - TOXENV=py3.5-django1.8-mysql-locmem
-        - TOXENV=py3.5-django1.8-mysql-filebased
-        - TOXENV=py3.5-django1.10-sqlite3-redis
-        - TOXENV=py3.5-django1.10-sqlite3-memcached
-        - TOXENV=py3.5-django1.10-sqlite3-pylibmc
-        - TOXENV=py3.5-django1.10-sqlite3-locmem
-        - TOXENV=py3.5-django1.10-sqlite3-filebased
-        - TOXENV=py3.5-django1.10-postgresql-redis
-        - TOXENV=py3.5-django1.10-postgresql-memcached
-        - TOXENV=py3.5-django1.10-postgresql-pylibmc
-        - TOXENV=py3.5-django1.10-postgresql-locmem
-        - TOXENV=py3.5-django1.10-postgresql-filebased
-        - TOXENV=py3.5-django1.10-mysql-redis
-        - TOXENV=py3.5-django1.10-mysql-memcached
-        - TOXENV=py3.5-django1.10-mysql-pylibmc
-        - TOXENV=py3.5-django1.10-mysql-locmem
-        - TOXENV=py3.5-django1.10-mysql-filebased
-        - TOXENV=py3.5-django1.11-sqlite3-redis
-        - TOXENV=py3.5-django1.11-sqlite3-memcached
-        - TOXENV=py3.5-django1.11-sqlite3-pylibmc
-        - TOXENV=py3.5-django1.11-sqlite3-locmem
-        - TOXENV=py3.5-django1.11-sqlite3-filebased
-        - TOXENV=py3.5-django1.11-postgresql-redis
-        - TOXENV=py3.5-django1.11-postgresql-memcached
-        - TOXENV=py3.5-django1.11-postgresql-pylibmc
-        - TOXENV=py3.5-django1.11-postgresql-locmem
-        - TOXENV=py3.5-django1.11-postgresql-filebased
-        - TOXENV=py3.5-django1.11-mysql-redis
-        - TOXENV=py3.5-django1.11-mysql-memcached
-        - TOXENV=py3.5-django1.11-mysql-pylibmc
-        - TOXENV=py3.5-django1.11-mysql-locmem
-        - TOXENV=py3.5-django1.11-mysql-filebased
-    - python: 3.6
-      env:
-        - TOXENV=py3.6-django1.11-sqlite3-redis
-        - TOXENV=py3.6-django1.11-sqlite3-memcached
-        - TOXENV=py3.6-django1.11-sqlite3-pylibmc
-        - TOXENV=py3.6-django1.11-sqlite3-locmem
-        - TOXENV=py3.6-django1.11-sqlite3-filebased
-        - TOXENV=py3.6-django1.11-postgresql-redis
-        - TOXENV=py3.6-django1.11-postgresql-memcached
-        - TOXENV=py3.6-django1.11-postgresql-pylibmc
-        - TOXENV=py3.6-django1.11-postgresql-locmem
-        - TOXENV=py3.6-django1.11-postgresql-filebased
-        - TOXENV=py3.6-django1.11-mysql-redis
-        - TOXENV=py3.6-django1.11-mysql-memcached
-        - TOXENV=py3.6-django1.11-mysql-pylibmc
-        - TOXENV=py3.6-django1.11-mysql-locmem
-        - TOXENV=py3.6-django1.11-mysql-filebased
-
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-sqlite3-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-sqlite3-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-sqlite3-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-sqlite3-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-sqlite3-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-postgresql-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-postgresql-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-postgresql-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-postgresql-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-postgresql-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-mysql-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-mysql-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-mysql-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-mysql-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.8-mysql-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-sqlite3-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-sqlite3-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-sqlite3-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-sqlite3-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-sqlite3-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-postgresql-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-postgresql-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-postgresql-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-postgresql-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-postgresql-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-mysql-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-mysql-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-mysql-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-mysql-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.10-mysql-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-sqlite3-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-sqlite3-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-sqlite3-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-sqlite3-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-sqlite3-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-postgresql-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-postgresql-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-postgresql-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-postgresql-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-postgresql-filebased
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-mysql-redis
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-mysql-memcached
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-mysql-pylibmc
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-mysql-locmem
+  - python: 2.7
+    env: TOXENV=py2.7-django1.11-mysql-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-sqlite3-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-sqlite3-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-sqlite3-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-sqlite3-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-sqlite3-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-postgresql-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-postgresql-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-postgresql-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-postgresql-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-postgresql-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-mysql-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-mysql-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-mysql-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-mysql-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.8-mysql-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-sqlite3-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-sqlite3-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-sqlite3-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-sqlite3-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-sqlite3-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-postgresql-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-postgresql-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-postgresql-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-postgresql-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-postgresql-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-mysql-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-mysql-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-mysql-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-mysql-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.10-mysql-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-sqlite3-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-sqlite3-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-sqlite3-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-sqlite3-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-sqlite3-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-postgresql-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-postgresql-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-postgresql-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-postgresql-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-postgresql-filebased
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-mysql-redis
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-mysql-memcached
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-mysql-pylibmc
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-mysql-locmem
+  - python: 3.4
+    env: TOXENV=py3.4-django1.11-mysql-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-sqlite3-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-sqlite3-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-sqlite3-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-sqlite3-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-sqlite3-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-postgresql-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-postgresql-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-postgresql-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-postgresql-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-postgresql-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-mysql-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-mysql-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-mysql-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-mysql-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.8-mysql-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-sqlite3-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-sqlite3-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-sqlite3-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-sqlite3-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-sqlite3-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-postgresql-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-postgresql-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-postgresql-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-postgresql-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-postgresql-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-mysql-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-mysql-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-mysql-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-mysql-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.10-mysql-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-sqlite3-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-sqlite3-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-sqlite3-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-sqlite3-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-sqlite3-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-postgresql-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-postgresql-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-postgresql-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-postgresql-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-postgresql-filebased
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-mysql-redis
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-mysql-memcached
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-mysql-pylibmc
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-mysql-locmem
+  - python: 3.5
+    env: TOXENV=py3.5-django1.11-mysql-filebased
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-sqlite3-redis
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-sqlite3-memcached
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-sqlite3-pylibmc
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-sqlite3-locmem
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-sqlite3-filebased
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-postgresql-redis
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-postgresql-memcached
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-postgresql-pylibmc
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-postgresql-locmem
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-postgresql-filebased
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-mysql-redis
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-mysql-memcached
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-mysql-pylibmc
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-mysql-locmem
+  - python: 3.6
+    env: TOXENV=py3.6-django1.11-mysql-filebased
 
 sudo: false
 
