--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{2.7,3.4,3.5,3.6}-django1.11-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{3.4,3.5,3.6}-django2.0-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
     py{3.5,3.6,3.7}-django2.1-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
+    py{3.5,3.6,3.7}-django2.2-{sqlite3,postgresql,mysql}-{redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
 basepython =
@@ -15,6 +16,7 @@ deps =
     django1.11: Django>=1.11,<1.12
     django2.0: Django>=2.0,<2.1
     django2.1: Django>=2.1,<2.2
+    django2.2: Django>=2.2,<2.3
     psycopg2-binary
     mysqlclient
     django-redis
