--- a/.travis.yml
+++ b/.travis.yml
@@ -1,342 +1,27 @@
+dist: xenial
 language: python
+python:
+  - "2.7"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "3.7"
 
 services:
   - memcached
+  - mysql
   - redis-server
-
-addons:
-  postgresql: 9.6
+  - postgresql
 
 cache: pip
 
-matrix:
-  include:
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-sqlite3-redis
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-sqlite3-memcached
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-sqlite3-pylibmc
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-sqlite3-locmem
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-sqlite3-filebased
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-postgresql-redis
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-postgresql-memcached
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-postgresql-pylibmc
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-postgresql-locmem
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-postgresql-filebased
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-mysql-redis
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-mysql-memcached
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-mysql-pylibmc
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-mysql-locmem
-    - python: 2.7
-      env: TOXENV=py2.7-django1.11-mysql-filebased
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-sqlite3-redis
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-sqlite3-memcached
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-sqlite3-pylibmc
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-sqlite3-locmem
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-sqlite3-filebased
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-postgresql-redis
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-postgresql-memcached
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-postgresql-pylibmc
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-postgresql-locmem
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-postgresql-filebased
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-mysql-redis
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-mysql-memcached
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-mysql-pylibmc
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-mysql-locmem
-    - python: 3.4
-      env: TOXENV=py3.4-django1.11-mysql-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-sqlite3-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-sqlite3-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-sqlite3-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-sqlite3-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-sqlite3-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-postgresql-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-postgresql-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-postgresql-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-postgresql-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-postgresql-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-mysql-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-mysql-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-mysql-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-mysql-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django1.11-mysql-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-sqlite3-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-sqlite3-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-sqlite3-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-sqlite3-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-sqlite3-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-postgresql-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-postgresql-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-postgresql-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-postgresql-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-postgresql-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-mysql-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-mysql-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-mysql-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-mysql-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django1.11-mysql-filebased
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-sqlite3-redis
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-sqlite3-memcached
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-sqlite3-pylibmc
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-sqlite3-locmem
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-sqlite3-filebased
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-postgresql-redis
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-postgresql-memcached
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-postgresql-pylibmc
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-postgresql-locmem
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-postgresql-filebased
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-mysql-redis
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-mysql-memcached
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-mysql-pylibmc
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-mysql-locmem
-    - python: 3.4
-      env: TOXENV=py3.4-django2.0-mysql-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-sqlite3-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-sqlite3-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-sqlite3-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-sqlite3-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-sqlite3-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-postgresql-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-postgresql-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-postgresql-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-postgresql-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-postgresql-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-mysql-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-mysql-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-mysql-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-mysql-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django2.0-mysql-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-sqlite3-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-sqlite3-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-sqlite3-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-sqlite3-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-sqlite3-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-postgresql-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-postgresql-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-postgresql-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-postgresql-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-postgresql-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-mysql-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-mysql-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-mysql-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-mysql-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django2.0-mysql-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-sqlite3-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-sqlite3-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-sqlite3-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-sqlite3-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-sqlite3-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-postgresql-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-postgresql-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-postgresql-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-postgresql-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-postgresql-filebased
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-mysql-redis
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-mysql-memcached
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-mysql-pylibmc
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-mysql-locmem
-    - python: 3.5
-      env: TOXENV=py3.5-django2.1-mysql-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-sqlite3-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-sqlite3-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-sqlite3-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-sqlite3-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-sqlite3-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-postgresql-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-postgresql-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-postgresql-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-postgresql-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-postgresql-filebased
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-mysql-redis
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-mysql-memcached
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-mysql-pylibmc
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-mysql-locmem
-    - python: 3.6
-      env: TOXENV=py3.6-django2.1-mysql-filebased
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-sqlite3-redis
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-sqlite3-memcached
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-sqlite3-pylibmc
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-sqlite3-locmem
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-sqlite3-filebased
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-postgresql-redis
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-postgresql-memcached
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-postgresql-pylibmc
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-postgresql-locmem
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-postgresql-filebased
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-mysql-redis
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-mysql-memcached
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-mysql-pylibmc
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-mysql-locmem
-    - python: 3.7
-      env: TOXENV=py3.7-django2.1-mysql-filebased
-  allow_failures:
-    - env: TOXENV=py3.7-django2.1-sqlite3-redis
-    - env: TOXENV=py3.7-django2.1-sqlite3-memcached
-    - env: TOXENV=py3.7-django2.1-sqlite3-pylibmc
-    - env: TOXENV=py3.7-django2.1-sqlite3-locmem
-    - env: TOXENV=py3.7-django2.1-sqlite3-filebased
-    - env: TOXENV=py3.7-django2.1-postgresql-redis
-    - env: TOXENV=py3.7-django2.1-postgresql-memcached
-    - env: TOXENV=py3.7-django2.1-postgresql-pylibmc
-    - env: TOXENV=py3.7-django2.1-postgresql-locmem
-    - env: TOXENV=py3.7-django2.1-postgresql-filebased
-    - env: TOXENV=py3.7-django2.1-mysql-redis
-    - env: TOXENV=py3.7-django2.1-mysql-memcached
-    - env: TOXENV=py3.7-django2.1-mysql-pylibmc
-    - env: TOXENV=py3.7-django2.1-mysql-locmem
-    - env: TOXENV=py3.7-django2.1-mysql-filebased
-
-sudo: false
-
-install: pip install tox coveralls
+install: pip install tox tox-travis coveralls
 
 before_script:
   - psql -c 'CREATE USER cachalot SUPERUSER;' -U postgres
   - psql -c 'CREATE DATABASE cachalot OWNER cachalot;' -U postgres
   - mysql -u root -e 'CREATE DATABASE cachalot;'
 
-script: tox -e $TOXENV
+script: tox
 
 after_success: coveralls
