--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,24 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
+env:
+  - DJANGO="1.11"
+  - DJANGO="2.0"
+  - DJANGO="2.1"
+  - DJANGO="2.2"
+
+matrix:
+  exclude:
+    - python: 2.7
+      env: DJANGO=2.0
+    - python: 2.7
+      env: DJANGO=2.1
+    - python: 2.7
+      env: DJANGO=2.2
+    - python: 3.4
+      env: DJANGO=2.1
+    - python: 3.4
+      env: DJANGO=2.2
 
 services:
   - memcached
