--- a/tox.ini
+++ b/tox.ini
@@ -38,3 +38,11 @@ setenv =
     pylibmc:    CACHE_BACKEND=pylibmc
 commands =
     coverage run -a --source=cachalot ./runtests.py
+
+[travis:env]
+DJANGO =
+  1.11: django111
+  2.0: django20
+  2.1: django21
+  2.2: django22
+  2.3: django23
